Script pode ser carregado antes do jogo iniciar

--- a/src/interface/style.less
+++ b/src/interface/style.less
@@ -51,7 +51,7 @@
             0 0 0 2px #976543 inset,
             0 0 0 3px rgb(66, 31, 9) inset,
             0 -1px 1px 4px rgba(215,181,144,0.7) inset;
-        background: #b28e68 url(http://i.imgur.com/SlaWRrX.png) no-repeat scroll 293px -3px;
+        background: #b28e68 url(https://i.imgur.com/SlaWRrX.png) no-repeat scroll 293px -3px;
         -webkit-appearance: none;
         -moz-appearance: none;
         outline: none;
