--- a/src/interface/style.less
+++ b/src/interface/style.less
@@ -5,6 +5,7 @@
     margin-bottom: 10px;
 
     .button {
+        white-space: nowrap;
         position: relative;
         top: 0px;
         left: 0px;
